--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10002,3 +10002,11 @@ h3 {
     border-color: #dee2e6;
   }
 }
+
+.delete-button:hover + .delete_hide{
+  display: block;
+  color: red;
+}
+.delete_hide{
+  display: none;
+}
